plugins {
    id 'maven-publish'
    id 'fabric-loom' version '1.15.3'
    id 'babric-loom-extension' version '1.14.1'
    id "com.modrinth.minotaur" version "2.+"
}

version = property("mod_version")
group = property("maven_group")

base {
    archivesName = project.archives_base_name
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

loom {
    if (project.hasProperty("accesswidener_name") && project.accesswidener_name.length() > 0) {
        accessWidenerPath = file("src/main/resources/${project.accesswidener_name}.classTweaker")
    }
}

repositories {
    // Used for Babric Loom Extensions
    maven {
        name = "Babric"
        url = "https://maven.glass-launcher.net/babric"
    }

    // Used for many dependencies
    maven {
        name = "Glass Releases"
        url = "https://maven.glass-launcher.net/releases"
    }

    // Used for Snapshots
    maven {
        name = "Glass Snapshots"
        url = "https://maven.glass-launcher.net/snapshots"
    }

    // NyaRepo
    maven {
        name = "NyaRepo"
        url = "https://maven.fildand.cz/releases"
    }

    // Used for a StationAPI dependency.
    maven {
        name = "Froge Maven"
        url = "https://maven.minecraftforge.net/"
    }

    // Used for projects that do not have a maven repository, but do have a GitHub repository with working build scripts.
    maven {
        name = "Jitpack"
        url = "https://jitpack.io"
    }

    // Modrinth Maven
    exclusiveContent {
        forRepository {
            //noinspection ForeignDelegate
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }

    mavenCentral()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.glasslauncher:biny:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    implementation "org.slf4j:slf4j-api:1.8.0-beta4"
    implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.17.2"
    implementation "me.carleslc:Simple-Yaml:1.8.4"

    modImplementation("net.modificationstation:StationAPI:${project.stapi_version}") {
        exclude group: "babric", module: "fabric-loader"
    }

    if (project.hasProperty("modmenu_version")) {
        modImplementation("net.danygames2014:modmenu:${project.modmenu_version}") {
            transitive = false
        }
    }

    if (project.hasProperty("glass_networking_version")) {
        modImplementation("net.glasslauncher.mods:glass-networking:${project.glass_networking_version}") {
            transitive = false
        }
    }

    if (project.hasProperty("gcapi_version")) {
        modImplementation("net.glasslauncher.mods:GlassConfigAPI:${project.gcapi_version}") {
            transitive = false
        }
    }

    if (project.hasProperty("alwaysmoreitems_version")) {
        modImplementation("net.glasslauncher.mods:AlwaysMoreItems:${project.alwaysmoreitems_version}") {
            transitive = false
        }
    }

    if (project.hasProperty("retrocommands_version")) {
        modImplementation("maven.modrinth:retrocommands:${project.retrocommands_version}-b1.7.3") {
            transitive = false
        }
    }

    if (project.hasProperty("spawneggs_version")) {
        modImplementation("net.danygames2014:spawneggs:${project.spawneggs_version}") {
            transitive = false
        }
    }

    if (project.hasProperty("bhcreative_version")) {
        modImplementation("maven.modrinth:bh-creative:${project.bhcreative_version}-b1.7.3") {
            transitive = false
        }
    }

    if (project.hasProperty("accessoryapi_version")) {
        modImplementation("maven.modrinth:accessory-api:${project.accessoryapi_version}") {
            transitive = false
        }
    }

    if (project.hasProperty("whatsthis_version")) {
        modImplementation("net.danygames2014:WhatsThis:${project.whatsthis_version}") {
            transitive = false
        }
    }

    if (project.hasProperty("nyalib_version")) {
        modImplementation("net.danygames2014:NyaLib:${project.nyalib_version}")
    }

    if (project.hasProperty("uniwrench_version")) {
        modImplementation("net.danygames2014:UniWrench:${project.uniwrench_version}") {
            transitive = false
        }
    }

    if (project.hasProperty("debugutilities_version")) {
        modImplementation("net.danygames2014:DebugUtilities:${project.debugutilities_version}")
    }

    if (project.hasProperty("retroauth_version")) {
        modRuntimeOnly("maven.modrinth:retroauth:${project.retroauth_version}-b1.7.3") {
            transitive = false
        }
    }

    if (project.hasProperty("unitweaks_version")) {
        modRuntimeOnly("maven.modrinth:unitweaks:${project.unitweaks_version}-b1.7.3") {
            transitive = false
        }
    }

    modImplementation("maven.modrinth:3d-dropped-item-stationapi:1.3-b1.7.3")

    modRuntimeOnly("maven.modrinth:fast-stapi-intro:2.0.0-b1.7.3") {
        transitive = false
    }
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

// Disables the generation of the .module file
tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
}

// Gradle 9 fails the build if there are no tests, but we are using the test package for a test mod
tasks.withType(Test).configureEach {
    failOnNoDiscoveredTests = false
}

java {
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_" + base.archivesName.get() }
    }
}